--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     ]
   },
   "scripts": {
-		"vscode:prepublish": "webpack --mode production",
-		"compile": "webpack --mode none",
-		"watch": "webpack --mode none --watch"
-	},
+    "vscode:prepublish": "webpack --mode production",
+    "compile": "webpack --mode none",
+    "watch": "webpack --mode none --watch"
+  },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
@@ -38,5 +38,8 @@
     "vscode-test": "^1.5.0",
     "webpack": "^5.27.2",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "slash": "^3.0.0"
   }
 }
